# grievous

./: .gitignore  Cargo.toml  README.md  build.rs  go.mod  main.go  scales.json
alsa/: alsa.c  alsa.go  alsa.h
cmd/: cmd.go
freqsjuicer/: freqsjuicer.go
libalsa/: alsa.c  alsa.h
music/: music.go
player/: alsa.go
savefile/: savefile.go
src/: main.rs
src/audio_file/: generator.rs  mod.rs  wav.rs
src/audio_player/: alsa.rs  mod.rs  player.rs  scale.rs
src/music/: mod.rs  note.rs  scale.rs  scales.rs
src/save_file/: wav.rs
