[package]
name = "grievous"
version = "0.0.2"
edition = "2021"
authors = ["Baraa Al-Masri <pub@mbaraa.com>"]
build = "build.rs"
description = "Named after General Grievous, where it generates noises from text files or a provided URL, just like how Grievous makes weird noises when he talks."
license = "GPL-3.0"
repository = "https://github.com/mbaraa/grievous"
keywords = ["ALSA", "audio", "sound"]
categories = ["multimedia::audio"]
readme = "README.md"

[dependencies]
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
cmake = "0.1.31"
serde = "1.0.210"
serde_json = "1.0.128"
